# tables

./: Cargo.toml  README.md
scripts/: create_migrations.sh  init_db.sh
src/: app.rs  communication.rs  db.rs  lib.rs  main.rs  tui.rs
