[package]
name = "tables"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["clock"] }
clap = { version = "4.5.21", features = ["derive"] }
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
